fix: [ASL-4781] Pdf protocol spacing issue

--- a/packages/asl-pages/pages/common/assets/sass/pdf/index.scss
+++ b/packages/asl-pages/pages/common/assets/sass/pdf/index.scss
@@ -99,7 +99,6 @@ section > h2 {
     font-size: 24px;
     border-bottom: 1px solid $dark-grey;
     padding-bottom: $govuk-gutter / 2;
-    margin-top: 40px;
     margin-bottom: 0;
   }
 }
